// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components <CrossLabel /> With onPressUrlTarget render 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    onPress={[Function]}
    style={
      Object {
        "color": "blue",
        "fontWeight": "bold",
      }
    }
  />
</View>
`;

exports[`components <CrossLabel /> Without onPress should render 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    onPressUrlTarget={null}
  >
    Hello
  </View>
</View>
`;
